--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
   ],
   "types": "build/index.d.ts",
   "scripts": {
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.2",
+    "jest": "^27.3.1",
+    "mobx": "^6.3.5",
+    "mobx-state-tree": "^5.0.4",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
   },
   "peerDependencies": {
-    "mobx": "^6.3.5",
-    "mobx-state-tree": "^5.0.4"
+    "mobx": ">=4.0.0",
+    "mobx-state-tree": ">=3.0.0"
   },
   "prettier": {
     "semi": false
