--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   "types": "build/index.d.ts",
   "scripts": {
     "build": "tsc -p .",
-    "test": "jest"
+    "test": "jest",
+    "publish": "semantic-release"
   },
   "devDependencies": {
+    "@semantic-release/git": "^10.0.0",
     "@types/jest": "^27.0.2",
     "jest": "^27.3.1",
     "mobx": "^6.3.5",
     "mobx-state-tree": "^5.0.4",
+    "semantic-release": "^18.0.0",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
   },
@@ -29,5 +32,20 @@
   },
   "prettier": {
     "semi": false
+  },
+  "release": {
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/npm",
+      "@semantic-release/github",
+      [
+        "@semantic-release/git",
+        {
+          "assets": "package.json",
+          "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+        }
+      ]
+    ]
   }
 }
