--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "semi": false
   },
   "release": {
+    "branches": [
+      "main"
+    ],
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
