fix(.circleci): Use infinitered-npm-package context

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,6 +78,7 @@ workflows:
           requires:
             - setup
       - publish:
+          context: infinitered-npm-package
           requires:
             - tests
           filters:
